# ima-2025

./: README.md  pyproject.toml
assignments/: filter_effects.ipynb  histogram_equalization.ipynb  notch_filters.ipynb  watermarking.ipynb
lectures/: digital_images.ipynb  intensity_transformations.ipynb  preliminaries.ipynb
tests/: __init__.py  test_filter_effects.py  test_histogram_equalization.py
tests/data/: histogram_equalization-target_luts.csv
