[project]
name = "ima-2025"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "ipywidgets>=8.1.7",
    "numpy>=2.2.6",
    "onnxruntime-gpu>=1.22.0",
    "opencv-contrib-python>=4.12.0.88",
    "pywavelets>=1.9.0",  # needed by skimage.restoration.estimate_sigma
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]
